fixed more margin issues and middle aligned blocks

--- a/apps/prairielearn/elements/pl-order-blocks/pl-order-blocks.css
+++ b/apps/prairielearn/elements/pl-order-blocks/pl-order-blocks.css
@@ -10,7 +10,7 @@ div.pl-order-blocks-bottom {
   /* This particular style renders the dropzones in a single column vertically */
   width: 100%;
   margin: 8px;
-  min-height: 8rem;
+  min-height: 130px;
 }
 
 li.pl-order-blocks-code {
@@ -45,6 +45,7 @@ li.ui-state-highlight {
   list-style-type: none;
   background-color: #90a4ae !important;
   min-width: 3em !important;
+  margin-bottom: 5px !important;
 }
 
 .pl-order-blocks-container > ul {
@@ -85,7 +86,7 @@ li.ui-state-highlight {
 .pl-block-horizontal > ul > li{
   letter-spacing: normal;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   white-space: nowrap;  
 }
 
